--- a/index.html
+++ b/index.html
@@ -99,13 +99,27 @@
 
 <section>
   <h2>About</h2>
-  <p>Motivated and customer-focused Support Engineer with 3.5+ years of experience in multichannel technical assistance and troubleshooting. Skilled in diagnosing and resolving complex issues efficiently while providing exceptional customer service.</p>
+  <p>Technical Support Specialist with 3.5+ years of experience in customer success, technical implementation, and support for SaaS products. Proficient in onboarding, API integrations, workflow automation, and resolving escalations. Adept at building client-centric solutions, collaborating with cross-functional teams, and driving product enhancements. Passionate about learning and applying emerging technologies.</p>
 </section>
 
 <section>
+  <h2>About</h2>
+  <p>
+<b><Languages:/b> Python, JavaScript<br>
+<b>Technical Expertise:/b> REST APIs, SOAP APIs, SaaS, Networking (TCP/IP, DNS, VLANs, Routing Protocols), JSON, XML, SQL, HTML, CSS<br>
+<b>Tools & Technologies:/b> ServiceNow, Freshservice, Freshdesk, Azure AD, GCP, O365, AWS, Postman, Database Encryption<br>
+<b>Soft Skills:/b> Client Onboarding, Problem-Solving, Collaboration, Communication<br>
+</p>
+  
+<section>
   <h2>Experience</h2>
   <ul>
-    <li><strong>Customer Success Specialist</strong> - IDP Education Ltd. (July 2023 - Present)</li>
+    <li><strong>Client Account Manager</strong> - IDP Education Ltd. (July 2023 - July 2024)<br>
+      <p><li></li>Onboarded and supported 50+ clients, customizing product implementations to align with business objectives.</li>
+<li> Integrated APIs to automate workflows and optimize CRM and system efficiency.  </li>
+<li>Advocated for customer needs, collaborating with Product and Engineering teams to address technical challenges.</li>
+</p>
+    </li>
     <li><strong>Product Specialist</strong> - Freshworks (April 2022 - March 2023)</li>
     <li><strong>Assistant Systems Engineer</strong> - TCS (November 2020 - April 2022)</li>
   </ul>
