--- a/index.html
+++ b/index.html
@@ -104,12 +104,12 @@
 
 <section>
   <h2>About</h2>
-  <p>
+  <ul>
 <b><Languages:/b> Python, JavaScript<br>
-<b>Technical Expertise:/b> REST APIs, SOAP APIs, SaaS, Networking (TCP/IP, DNS, VLANs, Routing Protocols), JSON, XML, SQL, HTML, CSS<br>
-<b>Tools & Technologies:/b> ServiceNow, Freshservice, Freshdesk, Azure AD, GCP, O365, AWS, Postman, Database Encryption<br>
-<b>Soft Skills:/b> Client Onboarding, Problem-Solving, Collaboration, Communication<br>
-</p>
+<b>Technical Expertise:</b> REST APIs, SOAP APIs, SaaS, Networking (TCP/IP, DNS, VLANs, Routing Protocols), JSON, XML, SQL, HTML, CSS<br>
+<b>Tools & Technologies:</b> ServiceNow, Freshservice, Freshdesk, Azure AD, GCP, O365, AWS, Postman, Database Encryption<br>
+<b>Soft Skills:</b> Client Onboarding, Problem-Solving, Collaboration, Communication<br>
+</ul>
   
 <section>
   <h2>Experience</h2>
