--- a/index.html
+++ b/index.html
@@ -103,14 +103,13 @@
 </section>
 
 <section>
-  <h2>About</h2>
-  <ul>
-<b><Languages:/b> Python, JavaScript<br>
-<b>Technical Expertise:</b> REST APIs, SOAP APIs, SaaS, Networking (TCP/IP, DNS, VLANs, Routing Protocols), JSON, XML, SQL, HTML, CSS<br>
-<b>Tools & Technologies:</b> ServiceNow, Freshservice, Freshdesk, Azure AD, GCP, O365, AWS, Postman, Database Encryption<br>
-<b>Soft Skills:</b> Client Onboarding, Problem-Solving, Collaboration, Communication<br>
-</ul>
-  
+  <h2>Skills</h2>
+      <ul>
+         <li><b><Languages: </b> Python, JavaScript</li>
+         <li><b>Technical Expertise:</b> REST APIs, SOAP APIs, SaaS, Networking (TCP/IP, DNS, VLANs, Routing Protocols), JSON, XML, SQL, HTML, CSS</li>
+         <li><b>Tools & Technologies:</b> ServiceNow, Freshservice, Freshdesk, Azure AD, GCP, O365, AWS, Postman, Database Encryption</li> 
+         <li><b>Soft Skills:</b> Client Onboarding, Problem-Solving, Collaboration, Communication</li>
+      </ul>
 <section>
   <h2>Experience</h2>
   <ul>
