--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
 <section>
   <h2>Skills</h2>
       <ul>
-         <li><b><Languages: </b> Python, JavaScript</li>
-         <li><b>Technical Expertise:</b> REST APIs, SOAP APIs, SaaS, Networking (TCP/IP, DNS, VLANs, Routing Protocols), JSON, XML, SQL, HTML, CSS</li>
-         <li><b>Tools & Technologies:</b> ServiceNow, Freshservice, Freshdesk, Azure AD, GCP, O365, AWS, Postman, Database Encryption</li> 
-         <li><b>Soft Skills:</b> Client Onboarding, Problem-Solving, Collaboration, Communication</li>
+         <li><b>Languages:</b><p>Python, JavaScript</p></li>
+         <li><b>Technical Expertise:</b> <p>REST APIs, SOAP APIs, SaaS, Networking (TCP/IP, DNS, VLANs, Routing Protocols), JSON, XML, SQL, HTML, CSS</p></li>
+         <li><b>Tools & Technologies:</b> <p> ServiceNow, Freshservice, Freshdesk, Azure AD, GCP, O365, AWS, Postman, Database Encryption</p></li> 
+         <li><b>Soft Skills:</b><p>Client Onboarding, Problem-Solving, Collaboration, Communication</p> </li>
       </ul>
 <section>
   <h2>Experience</h2>
