--- a/index.html
+++ b/index.html
@@ -113,12 +113,12 @@
 <section>
   <h2>Experience</h2>
   <ul>
-    <li><strong>Client Account Manager</strong> - IDP Education Ltd. (July 2023 - July 2024)<br>
-      <p><li></li>Onboarded and supported 50+ clients, customizing product implementations to align with business objectives.</li>
-<li> Integrated APIs to automate workflows and optimize CRM and system efficiency.  </li>
-<li>Advocated for customer needs, collaborating with Product and Engineering teams to address technical challenges.</li>
-</p>
-    </li>
+    <strong>Client Account Manager - IDP Education Ltd. (July 2023 - July 2024)</strong><br>
+      <p><li>Onboarded and supported 50+ clients, customizing product implementations to align with business objectives.</li>
+         <li> Integrated APIs to automate workflows and optimize CRM and system efficiency.  </li>
+          <li>Advocated for customer needs, collaborating with Product and Engineering teams to address technical challenges.</li>
+       </p>
+    
     <li><strong>Product Specialist</strong> - Freshworks (April 2022 - March 2023)</li>
     <li><strong>Assistant Systems Engineer</strong> - TCS (November 2020 - April 2022)</li>
   </ul>
