--- a/index.html
+++ b/index.html
@@ -119,28 +119,36 @@
           <li>Advocated for customer needs, collaborating with Product and Engineering teams to address technical challenges.</li>
        </p>
     
-    <li><strong>Product Specialist</strong> - Freshworks (April 2022 - March 2023)</li>
-    <li><strong>Assistant Systems Engineer</strong> - TCS (November 2020 - April 2022)</li>
+    <li><strong>Product Specialist - Freshworks (April 2022 - March 2023)</strong></li>
+    <p>Delivered POCs and technical demonstrations, providing multi-channel support (tickets, email, chat, and calls) to ensure client satisfaction.
+      Reduced customer issues by 68% through tailored technical solutions and proactive problem resolution.
+      Configured API-driven workflow automations, troubleshooting SSO and alert/asset management issues.
+    </p>
+    
+    <li><strong>Assistant Systems Engineer - TCS (November 2020 - April 2022)</strong></li>
+    <p>Developed and customized ServiceNow modules, enabling enterprise-grade scripting and API integration.
+       Partnered with cross-functional teams to resolve technical issues and support large-scale projects.
+    </p>
   </ul>
 </section>
 
 <section>
   <h2>Education</h2>
   <ul>
-    <li><strong>B.E. in Electronics and Communication Engineering</strong> - Meenakshi College of Engineering (August 2016 - April 2020)</li>
+    <li><strong>B.E. in Electronics and Communication Engineering</strong> - Meenakshi College of Engineering (August 2016 - August 2020)</li>
   </ul>
 </section>
 
 <section>
   <h2>Skills</h2>
   <div class="skills">
-    <span>.NET</span>
+    <span>Python</span>
     <span>JavaScript</span>
     <span>React JS</span>
-    <span>Python</span>
+    <span>API</span>
     <span>SQL</span>
     <span>Networking</span>
-    <span>REST API</span>
+    <span>Workflow automation</span>
     <span>ServiceNow</span>
     <span>JIRA</span>
   </div>
@@ -164,9 +172,10 @@
 
 <section>
   <h2>Contact</h2>
-  <p>Email: <a href="mailto:navinkumarspm@outlook.com">navinkumarspm@outlook.com</a></p>
+  <p>Email: <a href="mailto:navinkumarspm@gmail.com">navinkumarspm@gmail.com</a></p>
   <p>Phone: <a href="tel:+916380572511">+91 6380572511</a></p>
-  <p>LinkedIn: <a href="https://www.linkedin.com/in/navin-n-3057a9197/" target="_blank">linkedin.com/in/navin-n-3057a9197</a></p>
+  <p>LinkedIn: <a href="https://www.linkedin.com/in/thenameisnavin/" target="_blank">linkedin.com/in/thenameisnavin/</a></p>
+  <p>Github: <a href="https://github.com/TheNameisNavin">github.com/TheNameisNavin</a></p>
 </section>
 
 <footer>
