--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Navin Kumar S - Online Resume</title>
+  <title>Navin - Online Resume</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -111,7 +111,7 @@
          <li><b>Soft Skills:</b><p>Client Onboarding, Problem-Solving, Collaboration, Communication</p> </li>
       </ul>
 <section>
-  <h2>Experience</h2>
+  <h2>Work Experience</h2>
   <ul>
     <strong>Client Account Manager - IDP Education Ltd. (July 2023 - July 2024)</strong><br>
       <p><li>Onboarded and supported 50+ clients, customizing product implementations to align with business objectives.</li>
@@ -136,6 +136,8 @@
   <h2>Education</h2>
   <ul>
     <li><strong>B.E. in Electronics and Communication Engineering</strong> - Meenakshi College of Engineering (August 2016 - August 2020)</li>
+    <li>Class XI & XII - DAV Gopalapuram, Chennai</li>
+    <LI>Class I to X - PSBB K K Nagar, Chennai</li>
   </ul>
 </section>
 
@@ -175,7 +177,7 @@
   <p>Email: <a href="mailto:navinkumarspm@gmail.com">navinkumarspm@gmail.com</a></p>
   <p>Phone: <a href="tel:+916380572511">+91 6380572511</a></p>
   <p>LinkedIn: <a href="https://www.linkedin.com/in/thenameisnavin/" target="_blank">linkedin.com/in/thenameisnavin/</a></p>
-  <p>Github: <a href="https://github.com/TheNameisNavin">github.com/TheNameisNavin</a></p>
+  <p>Github: <a href="https://github.com/TheNameisNavin/">github.com/TheNameisNavin/</a></p>
 </section>
 
 <footer>
