--- a/index.html
+++ b/index.html
@@ -155,13 +155,21 @@
   <h2>Work Experience</h2>
   <ul>
     <li><strong>Client Account Manager - IDP Education Ltd. (2023 - 2024):</strong>
-      Onboarded and supported 50+ clients, customizing product implementations and optimizing CRM systems.
+      Onboarded and supported 50+ clients, customizing product implementations to align with business objectives.
+      Integrated APIs to automate workflows and optimize CRM and system efficiency.
+      Advocated for customer needs, collaborating with Product and Engineering teams to address technical challenges.
+
     </li>
     <li><strong>Product Specialist - Freshworks (2022 - 2023):</strong>
-      Delivered POCs and demos, reducing customer issues by 68%.
+      Delivered POCs and technical demonstrations, providing multi-channel support (tickets, email, chat, and calls) to ensure client satisfaction.
+      Reduced customer issues by 68% through tailored technical solutions and proactive problem resolution.
+      Configured API-driven workflow automations, troubleshooting SSO and alert/asset management issues.
+
     </li>
     <li><strong>Assistant Systems Engineer - TCS (2020 - 2022):</strong>
-      Developed enterprise-grade solutions using ServiceNow APIs.</li>
+      Developed and customized ServiceNow modules, enabling enterprise-grade scripting and API integration.
+      Partnered with cross-functional teams to resolve technical issues and support large-scale projects.
+</li>
   </ul>
 </section>
 
@@ -186,6 +194,7 @@
   <p>Email: <a href="mailto:navinkumarspm@gmail.com">navinkumarspm@gmail.com</a></p>
   <p>Phone: <a href="tel:+916380572511">+91 6380572511</a></p>
   <p>LinkedIn: <a href="https://www.linkedin.com/in/thenameisnavin/" target="_blank">linkedin.com/in/thenameisnavin</a></p>
+  <p>Github: <a href="https://github.com/TheNameisNavin/">github.com/TheNameisNavin/</a></p>
 </section>
 
 <footer>
