--- a/index.html
+++ b/index.html
@@ -154,19 +154,19 @@
 <section>
   <h2>Work Experience</h2>
   <ul>
-    <li><strong>Client Account Manager - IDP Education Ltd. (2023 - 2024):</strong>
-      Onboarded and supported 50+ clients, customizing product implementations to align with business objectives.
-      Integrated APIs to automate workflows and optimize CRM and system efficiency.
-      Advocated for customer needs, collaborating with Product and Engineering teams to address technical challenges.
+    <li><strong>Client Account Manager - IDP Education Ltd. (July 2023 - July 2024):</strong></li>
+      <li>Onboarded and supported 50+ clients, customizing product implementations to align with business objectives.</li>
+      <li>Integrated APIs to automate workflows and optimize CRM and system efficiency.</li>
+      <li>Advocated for customer needs, collaborating with Product and Engineering teams to address technical challenges.</li>
 
-    </li>
-    <li><strong>Product Specialist - Freshworks (2022 - 2023):</strong>
+    
+    <li><strong>Product Specialist - Freshworks (April 2022 - March 2023):</strong>
       Delivered POCs and technical demonstrations, providing multi-channel support (tickets, email, chat, and calls) to ensure client satisfaction.
       Reduced customer issues by 68% through tailored technical solutions and proactive problem resolution.
       Configured API-driven workflow automations, troubleshooting SSO and alert/asset management issues.
 
     </li>
-    <li><strong>Assistant Systems Engineer - TCS (2020 - 2022):</strong>
+    <li><strong>Assistant Systems Engineer - TCS (November 2020 - April 2022):</strong>
       Developed and customized ServiceNow modules, enabling enterprise-grade scripting and API integration.
       Partnered with cross-functional teams to resolve technical issues and support large-scale projects.
 </li>
